Fixed PerfectPixel and overflow for like-button #28

--- a/src/components/feedback/feedback.scss
+++ b/src/components/feedback/feedback.scss
@@ -1,7 +1,7 @@
 .feedback {
   display: grid;
   grid-template-rows: repeat(3, auto);
-  grid-template-columns: 56px auto;
+  grid-template-columns: minmax(56px, auto) auto;
   grid-template-areas:
     "post-1 post-2"
     "post-1 post-3"
@@ -38,6 +38,7 @@
     @include font-body;
     margin-top: 13px;
     margin-left: 3px;
+    margin-right: 3px;
     grid-area: post-4;
     font-size: 14px;
   }
